--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odin Recipes</title>
-</head>
-<body>
-  <h1>Odin Recipes</h1>
-  <a href="recipes/lasagna.html">Lasagna</a>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Odin Recipes</title>
+	</head>
+	<body>
+		<h1>Lucious Recipes!</h1>
+		<img src="recipes/chef.jpg" alt="" />
+		<div>
+			<ul>
+				<li><a href="recipes/lasagna.html">Lasagna</a></li>
+				<li><a href="recipes/hoisin-meatballs.html">Hoisin Meatballs</a></li>
+			</ul>
+		</div>
+	</body>
 </html>
