--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<ul>
 				<li><a href="recipes/lasagna.html">Lasagna</a></li>
 				<li><a href="recipes/hoisin-meatballs.html">Hoisin Meatballs</a></li>
+				<li><a href="recipes/genoise.html">Genoise</a></li>
 			</ul>
 		</div>
 	</body>
